[tool.poetry]
name = "mock-hook"
version = "0.1.1"
description = ""
authors = ["zhiheng.hu <zhiheng.hu@klook.com>"]
readme = "README.md"
packages = [{include = "mock_hook"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.scripts]
copycat = "mock_hook.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
